Move endpoint implementations to impl package (#1058)